--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Mobile_lab4</string>
+    <string name="app_name">ChatApp</string>
+    <string name="new_message">New Message</string>
 </resources>
