Added activity for creating a unique username

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ChatApp</string>
     <string name="new_message">New Message</string>
+    <string name="newUsernameLabel">Write your desired unique username</string>
 </resources>
