--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ChatApp</string>
     <string name="new_message">New Message</string>
     <string name="newUsernameLabel">Write your desired unique username</string>
+    <string name="defaultUsername">Guest</string>
 </resources>
